--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
 	<h1>This is a Heading</h1>
 	<p>This is a paragraph.</p>
+	<p>This is a paragraph.</p>
+	<p>This is another paragraph.</p>
+	
+	<p class="pintro">
+		Dit is de officiële website van de gemeentes Shanghai en New Orleans. De gemeentes Shanghai en New Orleans zijn verantwoordelijk voor de inhoud van deze website, en doet er alles aan deze actueel, juist en toegankelijk te houden. Komt u iets tegen dat niet correct is of verouderd  of heeft u suggesties voor verbetering? Laat het weten via de pagina Contacten 
+	</p>
 </body>
 </html>
