--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<div class="navbar">
+  <a class="active" href="#">Home</a>
+  <a href="#">Search</a>
+  <a href="#">Contact</a>
+  <a href="#">Login</a>
+</div>
+	
 	<h1>This is a Heading</h1>
 	<p>This is a paragraph.</p>
 	<p>This is a paragraph.</p>
