--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" href="/Webcarto.css"
+	<link rel="stylesheet" href="./webcarto.css"
 <meta charset="utf-8">
 <title>Naamloos document</title>
 </head>
 
 <body>
-	<div class="navbar">
-  		<a class="active" href="#">Home</a>
-  		<a href="#">Search</a>
-		<a href="#">Contact</a>
-  		<a href="#">Login</a>
-	</div>
-	
-	<h1>This is a Heading</h1>
-	<p>This is a paragraph.</p>
-	<p>This is a paragraph.</p>
-	<p>This is another paragraph.</p>
-	
-	<p class="pintro">
-		Dit is de officiële website van de gemeentes Shanghai en New Orleans. De gemeentes Shanghai en New Orleans zijn verantwoordelijk voor de inhoud van deze website, en doet er alles aan deze actueel, juist en toegankelijk te houden. Komt u iets tegen dat niet correct is of verouderd  of heeft u suggesties voor verbetering? Laat het weten via de pagina Contacten 
-	</p>
+		<div class="navbar">
+		  <a class="active" href="#">Home</a> 
+		  <a href="#">Search</a> 
+		  <a href="#">Contact</a> 
+		  <a href="#">Login</a>
+		</div>
+
+		<p>Try to resize the browser window to see the responsive effect.</p>
+
+		<div class="maincontainer">
+			<div class="subcontainer">
+			
+			</div>
+			
+			<div class="subcontainer">
+			
+			</div>
+		</div>
 </body>
 </html>
